# crash

./: Cargo.toml  README.md  install.sh  justfile  package.json
.github/workflows/: release.yml  test.yml
assets/: crash.ans  update.fish
src/: core.rs  download.rs  error.rs  lib.rs  main.rs
src-old/: core.rs  download.rs  lib.rs
src-old/tools/: stop.rs
src/assets/: mihomo.yaml  mihomo_tun.yaml
src/cli/: commands.rs  mod.rs  output.rs
src/common/: config.rs  error.rs  i18n.rs  logger.rs  mod.rs  shell.rs
src/config/: core.rs  installer.rs  mod.rs  patcher.rs  runtime.rs  web.rs
src/core/: geo.rs  installer.rs  mod.rs  updater.rs
src/download/: mod.rs  retry.rs
src/log/: file_appender.rs  formatter.rs  mod.rs
src/platform/: command.rs  mod.rs  path.rs  process.rs
src/process/: mod.rs  monitor.rs
src/scripts/: init.rs  menu.rs  mod.rs  start.rs  task.rs  webget.rs
src/tools/: exec.rs  mod.rs  shell_ddns.rs  stop.rs
src/utils/: command.rs  download.rs  format.rs  fs.rs  mod.rs  monitor.rs  path.rs  process.rs  time.rs
