[package]
name = "crash"
description = "A Rust port of ShellCrash - A tool for managing proxy cores like Clash/Mihomo/SingBox"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ahaoboy/crash"
homepage = "https://github.com/ahaoboy/crash"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for downloads
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"], default-features = false }

# Logging and time
chrono = "0.4"
once_cell = "1"

# Platform detection and proxy management
guess-target = { version = "0.1", git = "https://github.com/ahaoboy/guess-target", features = ["serde"] }
github-proxy = { version = "0.1", git = "https://github.com/ahaoboy/github-proxy", features = ["serde"] }

# Installation utilities
easy-install = { version = "1", git = "https://github.com/easy-install/easy-install" }

# String utilities
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"

# Network utilities
local-ip-address = "0.6"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
