[package]
name = "crash"
description = "A Rust port of ShellCrash - A tool for managing proxy cores like Clash/Mihomo/SingBox"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ahaoboy/crash"
homepage = "https://github.com/ahaoboy/crash"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
clap = { version = "4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false }
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", default-features = false }
chrono = "0.4"
once_cell = "1"
guess-target = { version = "0.1", git = "https://github.com/ahaoboy/guess-target", features = [
  "serde",
] }
github-proxy = { version = "0.1", git = "https://github.com/ahaoboy/github-proxy", features = [
  "serde",
] }
easy-install = { version = "1", git = "https://github.com/easy-install/easy-install", default-features = false, features = [
  "tar-gz",
] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
local-ip-address = "0.6"
anyhow = "1"
humansize = "2"
humantime = "2"
which = "8"
regex = { version = "1", default-features = false }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
